# Reproduction-of-CuDi

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: infer.py  train_student.py  train_teacher.py
src/cudi/data/: dataset.py
src/cudi/losses/: zero_reference.py
src/cudi/models/: curves.py  student.py  teacher.py
src/cudi/utils/: config.py  image.py
tests/: test.py  test_smoke.py
